--- a/partials/start.html
+++ b/partials/start.html
@@ -4,12 +4,12 @@
 			<h3>Ring <button class="btn btn-round btn-white">031-138304</button> för tidsbokning, eller maila oss direkt.</h3>
 			<div contact-form></div>
 		</div>
-		<div class="col-md-7 menu">
-			<ul class="pull-right">
-				<li><button class="btn btn-round-left btn-red"><i class="fa fa-bolt"></i> Akut</button></li>
-				<li><button class="btn btn-round-left btn-yellow"><i class="fa fa-mobile"></i> Ring mig</button></li>
-				<li><button class="btn btn-round-left btn-yellow"><i class="fa fa-pencil"></i> Lista mig</button></li>
-			</ul>
+		<div class="col-md-7">
+			<div class="pull-right row menu">
+				<button class="btn btn-round-left btn-red pull-right"><i class="fa fa-bolt"></i> Akut</button><br />
+				<button class="btn btn-round-left btn-yellow pull-right"><i class="fa fa-mobile"></i> Ring mig</button><br />
+				<button class="btn btn-round-left btn-yellow"><i class="fa fa-pencil"></i> Lista mig</button><br />
+			</div>
 		</div>
 	</div>
 </section>
@@ -19,7 +19,7 @@
 	<div class="jumbotron text-center">
 		<h1>Letar du tandläkare i Göteborg?</h1>
 		<p>
-			Beiring tandklinik vill skapa långsiktiga patientrelationer för att bibehålla och återskapa friska munnar. Allt du behver inom tandvård finns samlat hos oss: akuttandläkare, specialister och tendtekniker.
+			Beiring tandklinik vill skapa långsiktiga patientrelationer för att bibehålla och återskapa friska munnar. Allt du behöver inom tandvård finns samlat hos oss: akuttandläkare, specialister och tendtekniker.
 		</p>
 
 		<p>
@@ -34,11 +34,11 @@
 
 <section class="light container-fluid">
 	<div class="row">
-		<div class="col-md-6">
+		<div class="col-md-6 text-center">
 			<p>Östra Hamngatan 52</p>
 		</div>			
 
-		<div class="col-md-6">
+		<div class="col-md-6 text-center">
 			<p>Redbergsvägen 13 A</p>				
 		</div>			
 	</div>
