--- a/partials/about.html
+++ b/partials/about.html
@@ -1,1 +1,41 @@
-Välkommen till Beiring tandklinik
+
+<section class="container-fluid">
+	<div class="row">
+		<div class="col-xs-4">
+			<div class="">
+				<img class="img-responsive" src="img/3.jpg" />
+			</div>
+		</div>			
+
+		<div class="col-xs-4">
+			<div class="">
+				<img class="img-responsive" src="img/3.jpg" />
+			</div>
+		</div>			
+
+		<div class="col-xs-4">
+			<div class="">
+				<img class="img-responsive" src="img/3.jpg" />
+			</div>
+		</div>			
+
+	</div>
+</section>
+
+
+<section class="white container-fluid">
+	<div class="jumbotron text-center">
+		<h1>Välkommen till Beiring Tandklinik</h1>
+		<p>
+			Beiring tandklinik vill skapa långsiktiga patientrelationer för att bibehålla och återskapa friska munnar. Allt du behöver inom tandvård finns samlat hos oss: akuttandläkare, specialister och tendtekniker.
+		</p>
+
+	</div>
+</section>
+
+<section class="medium container-fluid">
+	<div contact-horizontal></div>
+</section>
+
+
+
