--- a/partials/footer.html
+++ b/partials/footer.html
@@ -46,7 +46,9 @@
 		</div>
 
 		<div class="col-md-2">
-			<h4>Vi finns på Facebook</h4>			
+			<h4>Vi finns på Facebook</h4>
+
+			<div class="fb-like" data-href="https://www.facebook.com/beiringtandklinik" data-layout="box_count" data-action="like" data-show-faces="false" data-share="false"></div>
 		</div>
 
 		<div class="col-md-2">
