--- a/partials/navigation.html
+++ b/partials/navigation.html
@@ -10,7 +10,7 @@
 				<span class="icon-bar"></span>
 			</button>
 
-			<a class="navbar-brand" href="#">Beiring</a>
+			<a class="navbar-brand" href="#/">Beiring</a>
 		</div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -20,7 +20,7 @@
         	<a href="#akut">Akut</a>
         </li>
 
-        <li>
+        <li ng-class="{ active: (isActive('/behandlingar'))}">
         	<a href="#behandlingar">Behandlingar</a>
         </li>
 
