--- a/partials/start.html
+++ b/partials/start.html
@@ -1,8 +1,10 @@
 <section class="splash container-fluid">
 	<div class="row">
-		<div class="col-md-5">
-			<h3>Ring <button class="btn btn-round btn-white">031-138304</button> för tidsbokning, eller maila oss direkt.</h3>
-			<div contact-form></div>
+		<div class="col-md-5 opaque">
+			<div class="form-container">
+				<h3>Ring <button class="btn btn-round btn-white">031-138304</button> för tidsbokning, eller maila oss direkt.</h3>
+				<div contact-vertical></div>
+			</div>
 		</div>
 		<div class="col-md-7">
 			<div class="pull-right row menu">
