--- a/partials/about.html
+++ b/partials/about.html
@@ -24,17 +24,86 @@
 
 
 <section class="white container-fluid">
-	<div class="jumbotron text-center">
-		<h1>Välkommen till Beiring Tandklinik</h1>
-		<p>
-			Beiring tandklinik vill skapa långsiktiga patientrelationer för att bibehålla och återskapa friska munnar. Allt du behöver inom tandvård finns samlat hos oss: akuttandläkare, specialister och tendtekniker.
-		</p>
+	<div class="narrow">
+		<div class="jumbotron text-center">
+			<h2 class="dark-text">Välkommen till Beiring Tandklinik</h2>
+			<p>
+				Beiring tandklinik vill skapa långsiktiga patientrelationer för att bibehålla och återskapa friska munnar. Allt du behöver inom tandvård finns samlat hos oss: akuttandläkare, specialister och tendtekniker.
+			</p>
 
+		</div>
 	</div>
 </section>
 
+
+<section class="light container-fluid">
+	<div class="narrow">
+
+		<h3 class="light-text">Frågor & svar</h3>
+
+
+		<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+		  <div class="panel panel-default">
+		    <div class="panel-heading" role="tab" id="headingOne">
+		      <h4 class="panel-title">
+		        <a role="button" data-toggle="collapse" data-parent="#accordion" href="" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+		          Vad ingår i en undersökning?
+		        </a>
+		      </h4>
+		    </div>
+		    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+		      <div class="panel-body">
+		        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+		      </div>
+		    </div>
+		  </div>
+		  <div class="panel panel-default">
+		    <div class="panel-heading" role="tab" id="headingTwo">
+		      <h4 class="panel-title">
+		        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+		         Lorem ipsum dolor?
+		        </a>
+		      </h4>
+		    </div>
+		    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+		      <div class="panel-body">
+		        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+		      </div>
+		    </div>
+		  </div>
+		  <div class="panel panel-default">
+		    <div class="panel-heading" role="tab" id="headingThree">
+		      <h4 class="panel-title">
+		        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+		          Donec dictum libero et arcu conseque?
+		        </a>
+		      </h4>
+		    </div>
+		    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+		      <div class="panel-body">
+		        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+		      </div>
+		    </div>
+		  </div>
+		</div>
+
+
+
+
+
+
+
+	</div>	
+</section>
+
+
+
+
+
 <section class="medium container-fluid">
-	<div contact-horizontal></div>
+	<div class="narrow">
+		<div contact-horizontal></div>
+	</div>
 </section>
 
 
