--- a/partials/behandlingar.html
+++ b/partials/behandlingar.html
@@ -11,47 +11,89 @@
 
 
 <section class="white container-fluid">
-	<div class="row">
-		<div class="col-md-4">
-			<div class="tile">
-				<h3>
-					Allmän tandvård
-				</h3>
-				<div class="box">&nbsp;</div>
-				<p class="caption">
-					Vi gör vårt allra bästa för att du ska ...
-				</p>
-			</div>
-		</div>			
+	<div class="narrow">
+		<div class="row">
+			<div class="col-md-4">
+				<div class="tile">
+					<h3>
+						Allmän tandvård
+					</h3>
+					<div class="box">&nbsp;</div>
+					<p class="caption">
+						Vi gör vårt allra bästa för att du ska ...
+					</p>
+				</div>
+			</div>			
 
-		<div class="col-md-4">
-			<div class="tile">
-				<h3>
-					Förebyggande tandvård
-				</h3>
-				<div class="box">&nbsp;</div>
-				<p class="caption">
-					Vi gör vårt allra bästa för att du ska ...
-				</p>
-			</div>
-		</div>			
+			<div class="col-md-4">
+				<div class="tile">
+					<h3>
+						Förebyggande tandvård
+					</h3>
+					<div class="box">&nbsp;</div>
+					<p class="caption">
+						Vi gör vårt allra bästa för att du ska ...
+					</p>
+				</div>
+			</div>			
 
-		<div class="col-md-4">
-			<div class="tile">
-				<h3>
-					Tandblekning
-				</h3>
-				<div class="box">&nbsp;</div>
-				<p class="caption">
-					Vi gör vårt allra bästa för att du ska ...
-				</p>
-			</div>
-		</div>			
+			<div class="col-md-4">
+				<div class="tile">
+					<h3>
+						Tandblekning
+					</h3>
+					<div class="box">&nbsp;</div>
+					<p class="caption">
+						Vi gör vårt allra bästa för att du ska ...
+					</p>
+				</div>
+			</div>			
+		</div>
+
+
+		<div class="row">
+			<div class="col-md-4">
+				<div class="tile">
+					<a href="#behandlingar/bettskena"><h3>Bettskena</h3></a>
+					<div class="box">&nbsp;</div>
+					<p class="caption">
+						Vi gör vårt allra bästa för att du ska ...
+					</p>
+				</div>
+			</div>			
+
+			<div class="col-md-4">
+				<div class="tile">
+					<h3>
+						Visdomstandskirurgi
+					</h3>
+					<div class="box">&nbsp;</div>
+					<p class="caption">
+						Vi gör vårt allra bästa för att du ska ...
+					</p>
+				</div>
+			</div>			
+
+			<div class="col-md-4">
+				<div class="tile">
+					<h3>
+						Allmän tandvård
+					</h3>
+					<div class="box">&nbsp;</div>
+					<p class="caption">
+						Vi gör vårt allra bästa för att du ska ...
+					</p>
+				</div>
+			</div>			
+		</div>
+
 	</div>
 </section>
 
 <section class="medium container-fluid">
-	<div contact-horizontal></div>
+	<div class="narrow">
+		<div contact-horizontal></div>
+	</div>
 </section>
 
 
