--- a/partials/start.html
+++ b/partials/start.html
@@ -18,65 +18,79 @@
 
 
 <section class="white container-fluid">
-	<div class="jumbotron text-center">
-		<h1>Letar du tandläkare i Göteborg?</h1>
-		<p>
-			Beiring tandklinik vill skapa långsiktiga patientrelationer för att bibehålla och återskapa friska munnar. Allt du behöver inom tandvård finns samlat hos oss: akuttandläkare, specialister och tendtekniker.
-		</p>
+	<div class="narrow">
+		<div class="jumbotron text-center">
+			<h1>Letar du tandläkare i Göteborg?</h1>
+			<p>
+				Beiring tandklinik vill skapa långsiktiga patientrelationer för att bibehålla och återskapa friska munnar. Allt du behöver inom tandvård finns samlat hos oss: akuttandläkare, specialister och tendtekniker.
+			</p>
 
-		<p>
-			<button class="btn btn-round btn-red"><i class="fa fa-bolt"></i> Akut</button>
-			<button class="btn btn-round btn-yellow"><i class="fa fa-mobile"></i> Ring mig</button>
-			<button class="btn btn-round btn-yellow"><i class="fa fa-pencil"></i> Lista mig</button>			
-		</p>
+			<p>
+				<button class="btn btn-round btn-red"><i class="fa fa-bolt"></i> Akut</button>
+				<button class="btn btn-round btn-yellow"><i class="fa fa-mobile"></i> Ring mig</button>
+				<button class="btn btn-round btn-yellow"><i class="fa fa-pencil"></i> Lista mig</button>			
+			</p>
 
+		</div>
 	</div>
 </section>
 
 
 <section class="light container-fluid">
-	<div class="row">
-		<div class="col-md-6 text-center">
-			<p>Östra Hamngatan 52</p>
-		</div>			
+	<div class="narrow">
+		<div class="row">
+			<div class="col-md-6 text-center">
+				<i class="fa fa-map-marker fa-3x"></i>
+				<h4>Östra Hamngatan 52</h4>
+				<p><strong>Mån</strong>-Tis 7-20 | <strong>Ons</strong> 8-17 | <strong>Tors</strong> 8-18.30</p>
+				<p><strong>Fre</strong> 7.30-14.30 | <strong>Lör</strong> 10-14</p>
+				<p><strong>Tel</strong>: 031-138304</p>
+			</div>			
 
-		<div class="col-md-6 text-center">
-			<p>Redbergsvägen 13 A</p>				
-		</div>			
+			<div class="col-md-6 text-center">
+				<i class="fa fa-map-marker fa-3x"></i>
+				<h4>Redbergsvägen 13 A</h4>
+				<p><strong>Mån</strong>8-19 | <strong>Tis</strong>8-20 | <strong>Ons</strong> 8-18 | <strong>Tors</strong> 8-15.30</p>
+				<p><strong>Fre</strong> 8-15.30 (Telefontider 8-15.30)</p>
+				<p><strong>Tel</strong>: 031-190107</p>
+			</div>			
+		</div>
 	</div>
 </section>
 
 
 <section class="medium container-fluid">
-	<div class="row">
-		<div class="col-md-4 text-center">
-			<img class="img-responsive center-block" src="img/tooth.png" />
+	<div class="narrow">
+		<div class="row">
+			<div class="col-md-4 text-center">
+				<img class="img-responsive center-block" src="img/tooth.png" />
 
-			<p>Göteborgs bästa tandläkare</p>
+				<p>Göteborgs bästa tandläkare</p>
 
-			<p>
-				<button class="btn btn-round btn-yellow">Läs mer om oss</button>
-			</p>
-		</div>			
+				<p>
+					<button class="btn btn-round btn-yellow">Läs mer om oss</button>
+				</p>
+			</div>			
 
-		<div class="col-md-4 text-center">
-			<img class="img-responsive center-block" src="img/tooth.png" />
+			<div class="col-md-4 text-center">
+				<img class="img-responsive center-block" src="img/tooth.png" />
 
-			<p>Vi har Göteborgs tandregleringsexperter</p>
+				<p>Vi har Göteborgs tandregleringsexperter</p>
 
-			<p>
-				<button class="btn btn-round btn-white">Läs mer om tandreglering</button>
-			</p>
-		</div>			
+				<p>
+					<button class="btn btn-round btn-white">Läs mer om tandreglering</button>
+				</p>
+			</div>			
 
-		<div class="col-md-4 text-center">
-			<img class="img-responsive center-block" src="img/tooth.png" />
+			<div class="col-md-4 text-center">
+				<img class="img-responsive center-block" src="img/tooth.png" />
 
-			<p>Bra priser och finansieringsmöjligheter</p>
+				<p>Bra priser och finansieringsmöjligheter</p>
 
-			<p>
-				<button class="btn btn-round btn-white">Läs mer om finansiering</button>
-			</p>
-		</div>			
+				<p>
+					<button class="btn btn-round btn-white">Läs mer om finansiering</button>
+				</p>
+			</div>			
+		</div>
 	</div>
 </section>
