--- a/partials/start.html
+++ b/partials/start.html
@@ -7,7 +7,7 @@
 			</div>
 		</div>
 		<div class="col-md-7">
-			<div class="pull-right row menu">
+			<div class="menu">
 				<button class="btn btn-round-left btn-red pull-right"><i class="fa fa-bolt"></i> Akut</button><br />
 				<button class="btn btn-round-left btn-yellow pull-right"><i class="fa fa-mobile"></i> Ring mig</button><br />
 				<button class="btn btn-round-left btn-yellow"><i class="fa fa-pencil"></i> Lista mig</button><br />
