Bettskena i menyn så länge..

--- a/partials/navigation.html
+++ b/partials/navigation.html
@@ -24,8 +24,8 @@
         	<a href="#behandlingar">Behandlingar</a>
         </li>
 
-        <li ng-class="{ active: (isActive('/tandreglering'))}">
-        	<a href="#tandreglering">Tandreglering</a>
+        <li ng-class="{ active: (isActive('/behandlingar/bettskena'))}">
+        	<a href="#behandlingar/bettskena">Bettskena</a>
         </li>
 
         <li ng-class="{ active: (isActive('/vardgivare'))}">
