--- a/partials/start.html
+++ b/partials/start.html
@@ -63,9 +63,9 @@
 	<div class="narrow">
 		<div class="row">
 			<div class="col-md-4 text-center">
-				<img class="img-responsive center-block" src="img/tooth.png" />
+				<img class="img-responsive center-block" src="img/chair.png" />
 
-				<p>Göteborgs bästa tandläkare</p>
+				<h3>Göteborgs bästa tandläkare</h3>
 
 				<p>
 					<button class="btn btn-round btn-yellow">Läs mer om oss</button>
@@ -75,7 +75,7 @@
 			<div class="col-md-4 text-center">
 				<img class="img-responsive center-block" src="img/tooth.png" />
 
-				<p>Vi har Göteborgs tandregleringsexperter</p>
+				<h3>Vi har Göteborgs tandregleringsexperter</h3>
 
 				<p>
 					<button class="btn btn-round btn-white">Läs mer om tandreglering</button>
@@ -83,9 +83,9 @@
 			</div>			
 
 			<div class="col-md-4 text-center">
-				<img class="img-responsive center-block" src="img/tooth.png" />
+				<img class="img-responsive center-block" src="img/pig.png" />
 
-				<p>Bra priser och finansieringsmöjligheter</p>
+				<h3>Bra priser och finansieringsmöjligheter</h3>
 
 				<p>
 					<button class="btn btn-round btn-white">Läs mer om finansiering</button>
