html5 input types

--- a/partials/directives/contactform-vertical.html
+++ b/partials/directives/contactform-vertical.html
@@ -4,11 +4,11 @@
 	</div>
 
 	<div class="form-group">
-		<input type="text" class="form-control" placeholder="Telefonnummer" name="telefon" />
+		<input type="telephone" class="form-control" placeholder="Telefonnummer" name="telefon" />
 	</div>
 
 	<div class="form-group">
-		<input type="text" class="form-control" placeholder="E-post" name="epost" />
+		<input type="email" class="form-control" placeholder="E-post" name="epost" />
 	</div>
 
 	<div class="form-group">
