--- a/partials/directives/contactform-horizontal.html
+++ b/partials/directives/contactform-horizontal.html
@@ -9,11 +9,11 @@
 		</div>
 
 		<div class="form-group">
-			<input type="text" class="form-control" placeholder="Telefonnummer" name="telefon" />
+			<input type="phone" class="form-control" placeholder="Telefonnummer" name="telefon" />
 		</div>
 
 		<div class="form-group">
-			<input type="text" class="form-control" placeholder="E-post" name="epost" />
+			<input type="email" class="form-control" placeholder="E-post" name="epost" />
 		</div>
 
 		<div class="form-group">
