--- a/partials/start.html
+++ b/partials/start.html
@@ -2,7 +2,7 @@
 	<div class="row">
 		<div class="col-md-5 opaque">
 			<div class="form-container">
-				<h3>Ring <button class="btn btn-round btn-white">031-138304</button> för tidsbokning, eller maila oss direkt.</h3>
+				<h3>Ring <span class="btn btn-round btn-white">031-138304</span> för tidsbokning, eller maila oss direkt.</h3>
 				<div contact-vertical></div>
 			</div>
 		</div>
