--- a/partials/directives/contactform-horizontal.html
+++ b/partials/directives/contactform-horizontal.html
@@ -1,6 +1,6 @@
 <form class="row">
 	<div class="col-md-4">
-		<h3>Ring <button class="btn btn-round btn-white">031-138304</button> för tidsbokning, eller maila oss direkt.</h3>
+		<h3>Ring <span class="btn btn-round btn-white"><a href="tel:031138304">031-138304</a></span> för tidsbokning, eller maila oss direkt.</h3>
 	</div>
 
 	<div class="col-md-4">
