Försök med modals, använder browserstack nu

--- a/partials/start.html
+++ b/partials/start.html
@@ -8,10 +8,11 @@
 		</div>
 		<div class="col-md-7">
 			<div class="menu">
-				<button class="btn btn-round-left btn-red pull-right"><i class="fa fa-bolt"></i> Akut</button><br />
+				<button data-toggle="modal" data-target="#akut-modal" class="btn btn-round-left btn-red pull-right"><i class="fa fa-bolt"></i> Akut</button><br />
 				<button class="btn btn-round-left btn-yellow pull-right"><i class="fa fa-mobile"></i> Ring mig</button><br />
-				<button class="btn btn-round-left btn-yellow"><i class="fa fa-pencil"></i> Lista mig</button><br />
+				<button data-toggle="modal" data-target="#lista-mig-modal" class="btn btn-round-left btn-yellow"><i class="fa fa-pencil"></i> Lista mig</button><br />
 			</div>
+
 		</div>
 	</div>
 </section>
