--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,6 @@ body{
 }
 
 
-
 /*
  *
  * SECTIONS
@@ -130,6 +129,25 @@ section.medium{
 }
 
 
+/*
+ *
+ *
+ */
+.modal>.modal-dialog>.modal-content input,
+.modal>.modal-dialog>.modal-content textarea{
+	background-color: #EEE;
+}
+
+.modal>.modal-dialog>.modal-content{
+	border: none;
+	box-shadow: none !important;
+	border-radius: 0;
+}
+
+.modal>.modal-dialog>.modal-content>.modal-header,
+.modal>.modal-dialog>.modal-content>.modal-footer{
+	border: none;
+}
 
 /*
  *
@@ -243,6 +261,8 @@ input, textarea, select{
  *
  */
 
+body { padding-top: 90px; }
+
 .navbar-default .navbar-toggle,
 .navbar-default .navbar-toggle:hover{
 	border: none;
@@ -252,17 +272,18 @@ input, textarea, select{
 .navbar{
 	background-color: #FFF;
 	border: none;
-	margin-top: 20px;
+	padding-top: 20px;
+	padding-bottom: 20px;
 }
 
 @media(min-width:768px){
 	.navbar{
-		margin-right: 100px;	
+		padding-right: 100px;	
 	}
 }
 
-.navbar .navbar-nav>li>a{
-	color: #13A5AF;
+.navbar a{
+	color: #13A5AF !important;
 }
 
 
