--- a/partials/footer.html
+++ b/partials/footer.html
@@ -1,7 +1,8 @@
 <div class="container">
+	<div class="narrow"
 	<div class="row">
 		<div class="col-md-2">
-			Beiring logo
+			<img src="img/logo.png" />
 		</div>
 
 		<div class="col-md-2">
