--- a/partials/navigation.html
+++ b/partials/navigation.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-default" navigation>
-	<div class="container-fluid">
+<nav class="navbar navbar-default navbar-fixed-top" navigation>
+	<div class="container">
 		<!-- Brand and toggle get grouped for better mobile display -->
 		<div class="navbar-header">
 
@@ -13,9 +13,9 @@
 			<a class="navbar-brand" href="#/">Beiring</a>
 		</div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav navbar-right">
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right">
         <li ng-class="{ active: (isActive('/akut'))}">
         	<a href="#akut">Akut</a>
         </li>
@@ -39,8 +39,8 @@
         <li ng-class="{ active: (isActive('/om'))}">
         	<a href="#om">Om oss</a>
         </li>
-      </ul>
+        </ul>
 
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+        </div><!-- /.navbar-collapse -->
+  </div><!-- /.container -->
 </nav>
