--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ body{
 .opaque{
 	background-color: rgba(96, 196, 203, 0.6);
 	min-height: 500px;
+	padding-top: 10px;
 }
 
 
@@ -250,6 +251,11 @@ button{
 input, textarea, select{
 	box-shadow: none !important;
 	border: none !important;	
+}
+
+input,
+textarea {
+  font-size: 16px;
 }
 
 
