--- a/partials/start.html
+++ b/partials/start.html
@@ -1,7 +1,7 @@
 <section class="splash container-fluid">
 	<div class="row">
 		<div class="col-md-5 opaque">
-			<div class="form-container">
+			<div class="form-container center-block">
 				<h3>Ring <span class="btn btn-round btn-white"><a href="tel:031138304">031-138304</a></span> för tidsbokning, eller maila oss direkt.</h3>
 				<div contact-vertical></div>
 			</div>
@@ -9,7 +9,7 @@
 		<div class="col-md-7">
 			<div class="menu">
 				<button data-toggle="modal" data-target="#akut-modal" class="btn btn-round-left btn-red pull-right"><i class="fa fa-bolt"></i> Akut</button><br />
-				<button class="btn btn-round-left btn-yellow pull-right"><i class="fa fa-mobile"></i> Ring mig</button><br />
+				<button data-toggle="modal" data-target="#ring-mig-modal" class="btn btn-round-left btn-yellow pull-right"><i class="fa fa-mobile"></i> Ring mig</button><br />
 				<button data-toggle="modal" data-target="#lista-mig-modal" class="btn btn-round-left btn-yellow"><i class="fa fa-pencil"></i> Lista mig</button><br />
 			</div>
 
@@ -27,9 +27,9 @@
 			</p>
 
 			<p>
-				<button class="btn btn-round btn-red"><i class="fa fa-bolt"></i> Akut</button>
-				<button class="btn btn-round btn-yellow"><i class="fa fa-mobile"></i> Ring mig</button>
-				<button class="btn btn-round btn-yellow"><i class="fa fa-pencil"></i> Lista mig</button>			
+				<button data-toggle="modal" data-target="#akut-modal" class="btn btn-round btn-red"><i class="fa fa-bolt"></i> Akut</button>
+				<button data-toggle="modal" data-target="#ring-mig-modal" class="btn btn-round btn-yellow"><i class="fa fa-mobile"></i> Ring mig</button>
+				<button data-toggle="modal" data-target="#lista-mig-modal" class="btn btn-round btn-yellow"><i class="fa fa-pencil"></i> Lista mig</button>			
 			</p>
 
 		</div>
@@ -45,7 +45,7 @@
 				<h4>Östra Hamngatan 52</h4>
 				<p><strong>Mån</strong>-Tis 7-20 | <strong>Ons</strong> 8-17 | <strong>Tors</strong> 8-18.30</p>
 				<p><strong>Fre</strong> 7.30-14.30 | <strong>Lör</strong> 10-14</p>
-				<p><strong>Tel</strong>: 031-138304</p>
+				<p><strong>Tel</strong>: <a href="tel:031138304">031-138304</a></p>
 			</div>			
 
 			<div class="col-md-6 text-center">
@@ -53,7 +53,7 @@
 				<h4>Redbergsvägen 13 A</h4>
 				<p><strong>Mån</strong>8-19 | <strong>Tis</strong>8-20 | <strong>Ons</strong> 8-18 | <strong>Tors</strong> 8-15.30</p>
 				<p><strong>Fre</strong> 8-15.30 (Telefontider 8-15.30)</p>
-				<p><strong>Tel</strong>: 031-190107</p>
+				<p><strong>Tel</strong>: <a href="tel:031190107">031-190107</a></p>
 			</div>			
 		</div>
 	</div>
