--- a/partials/akut-modal.html
+++ b/partials/akut-modal.html
@@ -1,15 +1,12 @@
 
-<div class="modal" id="akut-modal">
+<div class="modal fade" id="akut-modal">
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
       </div>
       <div class="modal-body">
-        <p>Formulär</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-red btn-round">Ring mig</button>
+        <div akut-form></div>
       </div>
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
