--- a/partials/directives/contactform-horizontal.html
+++ b/partials/directives/contactform-horizontal.html
@@ -9,7 +9,7 @@
 		</div>
 
 		<div class="form-group">
-			<input type="phone" class="form-control" placeholder="Telefonnummer" name="telefon" />
+			<input type="tel" class="form-control" placeholder="Telefonnummer" name="telefon" />
 		</div>
 
 		<div class="form-group">
