--- a/partials/directives/contactform-vertical.html
+++ b/partials/directives/contactform-vertical.html
@@ -4,7 +4,7 @@
 	</div>
 
 	<div class="form-group">
-		<input type="telephone" class="form-control" placeholder="Telefonnummer" name="telefon" />
+		<input type="tel" class="form-control" placeholder="Telefonnummer" name="telefon" />
 	</div>
 
 	<div class="form-group">
