--- a/partials/ring-mig-modal.html
+++ b/partials/ring-mig-modal.html
@@ -1,12 +1,12 @@
 
-<div class="modal fade" id="lista-mig-modal">
+<div class="modal fade" id="ring-mig-modal">
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
       </div>
       <div class="modal-body">
-        <div contact-vertical></div>
+        <div call-me-form></div>
       </div>
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
