--- a/partials/start.html
+++ b/partials/start.html
@@ -1,18 +1,14 @@
 <section class="splash container-fluid">
-	<div class="row">
-		<div class="col-md-5 opaque">
-			<div class="form-container center-block">
-				<h3>Ring <span class="btn btn-round btn-white"><a href="tel:031138304">031-138304</a></span> för tidsbokning, eller maila oss direkt.</h3>
-				<div contact-vertical></div>
+	<div class="narrow">
+		<div class="row">
+			<div class="col-md-5 opaque">
+				<div class="form-container">
+					<h3>Ring <span class="btn btn-round btn-white"><a href="tel:031138304">031-138304</a></span> för tidsbokning, eller maila oss direkt.</h3>
+					<div contact-vertical></div>
+				</div>
 			</div>
-		</div>
-		<div class="col-md-7">
-			<div class="menu">
-				<button data-toggle="modal" data-target="#akut-modal" class="btn btn-round-left btn-red pull-right"><i class="fa fa-bolt"></i> Akut</button><br />
-				<button data-toggle="modal" data-target="#ring-mig-modal" class="btn btn-round-left btn-yellow pull-right"><i class="fa fa-mobile"></i> Ring mig</button><br />
-				<button data-toggle="modal" data-target="#lista-mig-modal" class="btn btn-round-left btn-yellow"><i class="fa fa-pencil"></i> Lista mig</button><br />
+			<div class="col-md-7">
 			</div>
-
 		</div>
 	</div>
 </section>
