--- a/partials/footer.html
+++ b/partials/footer.html
@@ -1,5 +1,5 @@
 <div class="container">
-	<div class="narrow"
+	<div class="narrow">
 	<div class="row">
 		<div class="col-md-2">
 			<img src="img/logo.png" />
@@ -47,13 +47,14 @@
 		</div>
 
 		<div class="col-md-2">
+			
+		</div>
+
+		<div class="col-md-2">
 			<h4>Vi finns på Facebook</h4>
 
 			<div class="fb-like" data-href="https://www.facebook.com/beiringtandklinik" data-layout="box_count" data-action="like" data-show-faces="false" data-share="false"></div>
 		</div>
 
-		<div class="col-md-2">
-			
-		</div>
 	</div>
 </div>
