--- a/partials/navigation.html
+++ b/partials/navigation.html
@@ -1,46 +1,52 @@
 <nav class="navbar navbar-default navbar-fixed-top" navigation>
-	<div class="container">
-		<!-- Brand and toggle get grouped for better mobile display -->
-		<div class="navbar-header">
+	<div class="container-fluid">
+        <div class="narrow">
+            <div class="row">
+                <div class="col-xs-12">
+            		<!-- Brand and toggle get grouped for better mobile display -->
+            		<div class="navbar-header">
 
-			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-				<span class="sr-only">Toggle navigation</span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			</button>
+            			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            				<span class="sr-only">Toggle navigation</span>
+            				<span class="icon-bar"></span>
+            				<span class="icon-bar"></span>
+            				<span class="icon-bar"></span>
+            			</button>
 
-			<a class="navbar-brand" href="#/">Beiring</a>
-		</div>
+            			<a class="navbar-brand" href="#/">Beiring</a>
+            		</div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav navbar-right">
-        <li ng-class="{ active: (isActive('/akut'))}">
-        	<a href="#akut">Akut</a>
-        </li>
+                    <!-- Collect the nav links, forms, and other content for toggling -->
+                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                        <ul class="nav navbar-nav navbar-right">
+                        <li ng-class="{ active: (isActive('/akut'))}">
+                        	<a href="#akut" data-toggle="collapse" data-target=".navbar-collapse">Akut</a>
+                        </li>
 
-        <li ng-class="{ active: (isActive('/behandlingar'))}">
-        	<a href="#behandlingar">Behandlingar</a>
-        </li>
+                        <li ng-class="{ active: (isActive('/behandlingar'))}">
+                        	<a href="#behandlingar" data-toggle="collapse" data-target=".navbar-collapse">Behandlingar</a>
+                        </li>
 
-        <li ng-class="{ active: (isActive('/behandlingar/bettskena'))}">
-        	<a href="#behandlingar/bettskena">Bettskena</a>
-        </li>
+                        <li ng-class="{ active: (isActive('/behandlingar/bettskena'))}">
+                        	<a href="#behandlingar/bettskena" data-toggle="collapse" data-target=".navbar-collapse">Bettskena</a>
+                        </li>
 
-        <li ng-class="{ active: (isActive('/vardgivare'))}">
-        	<a href="#vardgivare">Vårdgivare</a>
-        </li>
+                        <li ng-class="{ active: (isActive('/vardgivare'))}">
+                        	<a href="#vardgivare" data-toggle="collapse" data-target=".navbar-collapse">Vårdgivare</a>
+                        </li>
 
-        <li ng-class="{ active: (isActive('/priser'))}">
-        	<a href="#priser">Priser</a>
-        </li>
+                        <li ng-class="{ active: (isActive('/priser'))}">
+                        	<a href="#priser" data-toggle="collapse" data-target=".navbar-collapse">Priser</a>
+                        </li>
 
-        <li ng-class="{ active: (isActive('/om'))}">
-        	<a href="#om">Om oss</a>
-        </li>
-        </ul>
+                        <li ng-class="{ active: (isActive('/om'))}">
+                        	<a href="#om" data-toggle="collapse" data-target=".navbar-collapse">Om oss</a>
+                        </li>
+                        </ul>
 
-        </div><!-- /.navbar-collapse -->
+                    </div><!-- /.navbar-collapse -->
+                </div>
+            </div>
+        </div>
   </div><!-- /.container -->
 </nav>
