Logos in place, high def

--- a/partials/footer.html
+++ b/partials/footer.html
@@ -2,7 +2,7 @@
 	<div class="narrow">
 	<div class="row">
 		<div class="col-md-2">
-			<img src="img/logo.png" />
+			<img src="img/logo_neg.png" width="70px" />
 		</div>
 
 		<div class="col-md-2">
