--- a/partials/navigation.html
+++ b/partials/navigation.html
@@ -13,7 +13,9 @@
             				<span class="icon-bar"></span>
             			</button>
 
-            			<a class="navbar-brand" href="#/">Beiring</a>
+            			<a class="navbar-brand" href="#/">
+                            <img src="img/logo.png" height="40px" />
+                        </a>
             		</div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
