navigation closes on click

--- a/partials/navigation.html
+++ b/partials/navigation.html
@@ -6,7 +6,7 @@
             		<!-- Brand and toggle get grouped for better mobile display -->
             		<div class="navbar-header">
 
-            			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsing-menu" aria-expanded="false">
             				<span class="sr-only">Toggle navigation</span>
             				<span class="icon-bar"></span>
             				<span class="icon-bar"></span>
@@ -19,30 +19,30 @@
             		</div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
-                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <div class="collapse navbar-collapse" id="collapsing-menu">
                         <ul class="nav navbar-nav navbar-right">
                         <li ng-class="{ active: (isActive('/akut'))}">
-                        	<a href="#akut" data-toggle="collapse" data-target=".navbar-collapse">Akut</a>
+                        	<a href="#akut">Akut</a>
                         </li>
 
                         <li ng-class="{ active: (isActive('/behandlingar'))}">
-                        	<a href="#behandlingar" data-toggle="collapse" data-target=".navbar-collapse">Behandlingar</a>
+                        	<a href="#behandlingar">Behandlingar</a>
                         </li>
 
                         <li ng-class="{ active: (isActive('/behandlingar/bettskena'))}">
-                        	<a href="#behandlingar/bettskena" data-toggle="collapse" data-target=".navbar-collapse">Bettskena</a>
+                        	<a href="#behandlingar/bettskena">Bettskena</a>
                         </li>
 
                         <li ng-class="{ active: (isActive('/vardgivare'))}">
-                        	<a href="#vardgivare" data-toggle="collapse" data-target=".navbar-collapse">Vårdgivare</a>
+                        	<a href="#vardgivare">Vårdgivare</a>
                         </li>
 
                         <li ng-class="{ active: (isActive('/priser'))}">
-                        	<a href="#priser" data-toggle="collapse" data-target=".navbar-collapse">Priser</a>
+                        	<a href="#priser">Priser</a>
                         </li>
 
                         <li ng-class="{ active: (isActive('/om'))}">
-                        	<a href="#om" data-toggle="collapse" data-target=".navbar-collapse">Om oss</a>
+                        	<a href="#om">Om oss</a>
                         </li>
                         </ul>
 
