Changes as of 17 sep

--- a/partials/directives/call-me-form.html
+++ b/partials/directives/call-me-form.html
@@ -1,13 +1,17 @@
+<h3 ng-show="success" class="text-center">
+	Tack, vi ringer dig!
+</h3>
+
 <form class="row">
 	<div class="col-md-4">
 		<div class="form-group">
-			<input type="text" class="form-control" ng-model="user.name" placeholder="Namn" name="namn" />
+			<input type="text" class="form-control" ng-model="user.namn" placeholder="Namn" name="namn" />
 		</div>
 	</div>
 
 	<div class="col-md-4">
 		<div class="form-group">
-			<input type="tel" class="form-control" ng-model="user.phone" placeholder="Telefonnummer" name="telefon" />
+			<input type="tel" class="form-control" ng-model="user.telefon" placeholder="Telefonnummer" name="telefon" />
 		</div>
 	</div>
 
