--- a/partials/footer.html
+++ b/partials/footer.html
@@ -8,12 +8,12 @@
 		<div class="col-md-2">
 			<h4>On this website</h4>
 			<ul>
-				<li><a href="#akut">Akut</a></li>
-				<li><a href="#behandlingar">Behandlingar</a></li>
-				<li><a href="#tandreglering">Tandreglering</a></li>
-				<li><a href="#vardgivare">Vårdgivare</a></li>
-				<li><a href="#priser">Priser</a></li>
-				<li><a href="#om">Om oss</a></li>
+				<li><a href="akut">Akut</a></li>
+				<li><a href="behandlingar">Behandlingar</a></li>
+				<li><a href="tandreglering">Tandreglering</a></li>
+				<li><a href="vardgivare">Vårdgivare</a></li>
+				<li><a href="priser">Priser</a></li>
+				<li><a href="om">Om oss</a></li>
 			</ul>
 		</div>
 
@@ -24,7 +24,7 @@
 				<li><a href="">Förebyggande tandvård</a></li>
 				<li><a href="">Tandblekning</a></li>
 				<li><a href="">Estetik</a></li>
-				<li><a href="#behandlingar/bettskena">Bettskena</a></li>
+				<li><a href="behandlingar/bettskena">Bettskena</a></li>
 				<li><a href="">Visdomstandskirurgi</a></li>
 			</ul>
 		</div>
