--- a/partials/directives/akut-form.html
+++ b/partials/directives/akut-form.html
@@ -1,22 +1,26 @@
+<h3 ng-show="success" class="text-center">
+	Tack, vi kontaktar dig snarast!
+</h3>
+
 <form>
 	<div class="form-group">
-		<input type="text" class="form-control" placeholder="Namn" name="namn" />
+		<input type="text" class="form-control" ng-model="user.namn" placeholder="Namn" name="namn" />
 	</div>
 
 	<div class="form-group">
-		<input type="tel" class="form-control" placeholder="Telefonnummer" name="telefon" />
+		<input type="tel" class="form-control" ng-model="user.telefon" placeholder="Telefonnummer" name="telefon" />
 	</div>
 
 	<div class="form-group">
-		<input type="text" class="form-control" placeholder="Personnummer" name="pnr" />
+		<input type="text" class="form-control" ng-model="user.personnummer" placeholder="Personnummer" name="pnr" />
 	</div>
 
 	<div class="form-group">
-		<input type="email" class="form-control" placeholder="E-post" name="epost" />
+		<input type="email" class="form-control" ng-model="user.epost" placeholder="E-post" name="epost" />
 	</div>
 
 
 	<div class="form-group">
-		<button type="submit" class="btn btn-red form-control">Ring mig</textarea>
+		<button type="submit" ng-click="submit(user)" class="btn btn-red form-control">Ring mig</textarea>
 	</div>
 </form>
